# decomposer-mlx

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  RESEARCH.md  pyproject.toml  pytest.ini  ruff.toml
decomposer/: classifier.py  cli.py  config.py  debug_compare.py  logging_setup.py  manifest.py  preprocess.py  quality.py  workflow.py
decomposer/core/: backend.py  gguf_loader.py  gguf_pipeline.py  mlx_backend.py  mps_backend.py  perfetto.py  probes.py  residency.py  types.py  xray.py
decomposer/mlx_convert/: convert.py
decomposer/mlx_dit/: attention.py  layers.py  loader.py  rope.py  scheduler.py  transformer.py  transformer_block.py
decomposer/research/: apply.py  baseline.py  cli.py  experiments.py  ledger.py  oracle.py  report.py  run.py  runner.py
decomposer/web/: app.py  jobs.py
tests/: conftest.py  test_backend_fake.py  test_classifier.py  test_cli.py  test_config.py  test_gguf_loader.py  test_gguf_pipeline.py  test_logging_setup.py  test_manifest.py  test_mlx_backend.py  test_mps_backend.py  test_perfetto.py  test_preprocess.py  test_probes.py  test_q8_memory_contract.py  test_quality.py  test_residency.py  test_residency_contract.py  test_sqlite_job_store.py  test_types.py  test_web_app.py  test_web_jobs.py  test_workflow.py  test_xray.py
tests/research/: test_apply.py  test_baseline.py  test_cli.py  test_experiments.py  test_ledger.py  test_oracle.py  test_patches.py  test_queue_yaml.py  test_report.py  test_run.py  test_runner_decide.py
tests/test_mlx_dit/: test_attention.py  test_converter.py  test_layers.py  (+2 more)
(+19 files in other folders)
