[project]
name = "decomposer"
version = "0.2.0"
description = "Local Qwen-Image-Layered marketing-asset decomposition pipeline"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5.0",
    "diffusers @ git+https://github.com/huggingface/diffusers.git@79de3064ddf87ac7425731d201f84a88d0770607",
    "transformers>=4.51.3",
    "accelerate>=1.0.0",
    "gguf>=0.10.0",
    "safetensors>=0.4.5",
    "pillow>=10.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "sse-starlette>=2.1.0",
    "psutil>=6.0.0",
    "torchvision>=0.20.0",
    "pydantic-settings>=2.0",
    "scikit-image>=0.24",
    "scipy>=1.13",
    "pyyaml>=6.0",
    "peft>=0.19.1",
    "mlx>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]

[project.scripts]
decomposer = "decomposer.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["decomposer"]

[tool.pytest.ini_options]
markers = [
    "mps_required: requires Apple Silicon with MPS available; skipped without it",
]
